tests/ui/internal_schedule_runner.stderr
error[E0603]: module `runner` is private
 --> tests/ui/internal_schedule_runner.rs:1:23
  |
1 | use moirai::schedule::runner;
  |                       ^^^^^^ private module
  |
note: the module `runner` is defined here
 --> src/schedule/mod.rs
  |
  | mod runner;
  | ^^^^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/ui/internal_schedule_runner.rs:1:30
  |
1 | use moirai::schedule::runner;
  |                              ^ consider adding a `main` function to `$DIR/tests/ui/internal_schedule_runner.rs`
